integrates\refac(front): #793.34 editablefield css
- Update editablefield css


Former-commit-id: ab70034b43c44130be88eb9b768fdca58b4c426e

--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -633,6 +633,18 @@ label {
   width: 45%;
 }
 
+:global .w-fit-content {
+  width: fit-content;
+}
+
+:global .ws-pre-wrap {
+  white-space: pre-wrap;
+}
+
+:global .ww-break-word {
+  word-wrap: break-word;
+}
+
 /* Custom media */
 
 @media(min-width: 768px){
