airs\refac(front): #3532 forces supported language
- Added list of Forces' supported languages


Former-commit-id: 73eb6a312d5f6802ad652da00193ba4e7f54db66

--- a/airs/theme/2020/templates/products/forces.html
+++ b/airs/theme/2020/templates/products/forces.html
@@ -222,6 +222,59 @@
     {{ page.content }}
   </div>
 </div>
+<div class="mw-1366 ph-body center pv5 v-top">
+  <h2 class="roboto c-fluid-bk f1 fw6 tc">
+    Supported Languages
+  </h2>
+  <div class="center moon-gray mw8">
+    <ul class="list roboto f3-ns f4 fw7 dib-l ph4 mv0 pv0-l pv4 tl">
+      <li>ABAP</li>
+      <li>ActionScript</li>
+      <li>ASP.NET</li>
+      <li>Apex</li>
+      <li>C</li>
+      <li>C#</li>
+      <li>C++</li>
+      <li>Cloudformation</li>
+      <li>Cobol</li>
+      <li>Go</li>
+    </ul>
+    <ul class="list roboto f3-ns f4 fw7 dib-l ph4 mv0 pv0-l pv4 tl">
+      <li>Hana SQL Script</li>
+      <li>HTML</li>
+      <li>Informix</li>
+      <li>Java</li>
+      <li>JavaScript/TypeScript</li>
+      <li>JCL</li>
+      <li>JSP</li>
+      <li>Kotlin</li>
+      <li>Natural</li>
+      <li>Objective C</li>
+    </ul>
+    <ul class="list roboto f3-ns f4 fw7 dib-l ph4 mv0 pv0-l pv4 tl">
+      <li>OracleForms</li>
+      <li>PHP</li>
+      <li>PL-SQL</li>
+      <li>PL1</li>
+      <li>PowerScript</li>
+      <li>Python</li>
+      <li>RPG4</li>
+      <li>Ruby</li>
+      <li>Scala</li>
+      <li>SQL</li>
+    </ul>
+    <ul class="list roboto f3-ns f4 fw7 dib-l ph4 mv0 pv0-l pv4 tl v-top">
+      <li>SQL</li>
+      <li>Swift</li>
+      <li>TAL</li>
+      <li>Terraform</li>
+      <li>Transact-SQL</li>
+      <li>VB.NET</li>
+      <li>VisualBasic 6</li>
+      <li>XML</li>
+    </ul>
+  </div>
+</div>
 <div class="mw-1366 center ph-body roboto tc pb6">
   <div class="w-100 tc">
     <img
