airs\fix(front): #3460 width of blog cards
- Change unit of meassure for the blog cards to rem


Former-commit-id: 00ae66ecd0e7831354ed3218e2fa19a51892f846

--- a/airs/theme/2020/static/scss/base.scss
+++ b/airs/theme/2020/static/scss/base.scss
@@ -230,7 +230,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .f-error { font-size: 10rem; }
 .mw-14 { max-width: 14rem; }
 .display-none { display: none; }
-.w-card { width: 350px; }
+.w-card { width: 21.875rem; }
 .h30-em { height: 30em; }
 .shadow-menu { box-shadow: 0 5px 5px 0 rgb(176,176,176,0.2); }
 .h-logo { height: 5rem; }
