airs\fix(front): #3472 skims resource
- Added Skims DataSheet as a resource
- Added link to Skims Docs in the product page


Former-commit-id: 9d2451087981f92fd386fd9b6a2c81178944532d

--- a/airs/theme/2020/templates/products/skims.html
+++ b/airs/theme/2020/templates/products/skims.html
@@ -126,13 +126,21 @@
       successfully remediated, guaranteeing that you have a much more secure,
       high-quality system before going into production.
     </p>
-    <div class="center tc">
-      <a class="no-underline tc f3 menu-txt-trans roboto hv-fluid-rd "
-      href="{{ SITEURL }}/contact-us/">
-        <button class="tc outline-transparent fw7 br2 bw1 ph5 pv2 bg-transparent bc-fluid-red ba hv-fluid-rd hv-fluid-bd bt-trans c-dkred pointer">
-          Get a Quote
-        </button>
-      </a>
+    <div class="tl-l tc">
+      <div class="tc dib-l pr2-l pv0-l pv3">
+        <a href="{{ SITEURL }}/resources/doc/skims/">
+          <button class="roboto tc outline-transparent fw7 f4 br2 bw1 ph4 pv3 bg-transparent bc-fluid-red ba hv-fluid-rd hv-fluid-bd bt-trans c-dkred pointer">
+              Check Documentation
+          </button>
+        </a>
+      </div>
+      <div class="tc dib-l pl2-l pv0-l pv3">
+        <a href="{{ SITEURL }}/contact-us/">
+          <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv3 ph4 roboto fw7 f4 dib bt-trans br2 bc-fluid-red ba">
+            Get a Quote
+          </button>
+        </a>
+      </div>
     </div>
   </div>
 </div>
