--- a/airs/theme/2020/templates/resources/resources.html
+++ b/airs/theme/2020/templates/resources/resources.html
@@ -424,6 +424,28 @@
         </div>
       </div>
     </div>
+    <div
+      class="datasheet fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card4.png"
+      alt="Webinar cover ESP"
+      class="br3 br--top">
+      <div class="ph3 mh1">
+        <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
+          Skims DataSheet
+          <br>
+          <br>
+        </h1>
+        <p class="c-fluid-bk fw3 f5 mv0">
+          Take a look at the key features and benefits of Skims here.
+          <br>
+        </p>
+        <div class="pv4 tc">
+          <a href="https://fluidattacks.docsend.com/view/ftgmc53d9e5c6m33">
+            <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Download Now</button>
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock content %}
