airs\refac(doc): #3457 skims to products
- Added Skims product in the Products index page


Former-commit-id: 88693ea5df0c174cf6b78808c5c49120653050aa

--- a/airs/theme/2020/templates/resources/resources.html
+++ b/airs/theme/2020/templates/resources/resources.html
@@ -426,7 +426,7 @@
     </div>
     <div
       class="datasheet fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
-      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card4.png"
+      <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card10.png"
       alt="Webinar cover ESP"
       class="br3 br--top">
       <div class="ph3 mh1">
