airs\fix(front): #3542 add more padding in home
Former-commit-id: 3e3773bb860c2ce9544f50a18670436fd10eddbf

--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -105,7 +105,7 @@
 </div>
 <div class="mw8 mr-auto ml-auto ph4">
   <div class="w-100">
-    <h2 class="f1 fw6 c-fluid-bk roboto mv4 lh-solid tc">
+    <h2 class="f1 fw6 c-fluid-bk roboto mt6 mb4 lh-solid tc ">
       Four elements that help you build and maintain secure IT systems
     </h2>
     <div class="section-height center justify-center items-center flex flex-wrap">
@@ -242,7 +242,7 @@
         </div>
       </div>
     </div>
-    <h2 class="f1 fw6 c-fluid-bk roboto mv4 tc lh-solid">
+    <h2 class="f1 fw6 c-fluid-bk roboto mt4 mb6 tc lh-solid">
       These four elements, which are part of our Continuous Hacking service,
       allow your company to achieve high vulnerability remediation rates
     </h2>
