--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -252,8 +252,7 @@
   <div class="mw-1366 ph-body center pv0-l pv4">
     <div class="w-100 mw8 center">
       <h2 class="white tc roboto f1 fw7 mv3">
-        Multiple Solutions, One Service<br>
-        Continuous Hacking
+        Continuous Hacking: Multiple Solutions, One Service
       </h2>
     </div>
     <div class="w-auto-l w5 tc center">
