airs\fix(front): #3565 contact slider bug
- Fixed the function for the slider in the Contact Us page


Former-commit-id: fa1938e69f48cd07c24bdaba8e26c8e3fb590bd0

--- a/airs/theme/2020/templates/contact-us.html
+++ b/airs/theme/2020/templates/contact-us.html
@@ -62,9 +62,9 @@
         </div>
       </div>
       <div class="tc">
-        <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans" onclick='currentSlide(1)'></span>
-        <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans" onclick='currentSlide(2)'></span>
-        <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans" onclick='currentSlide(3)'></span>
+        <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
+        <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
+        <span class="dot h-slide-bt w2 ma0 bg-fluid-gray dib slide-bt-trans"></span>
       </div>
       {% assets output="static/js/contactSlides.min.js", "js/tmp/contactSlides.min.js" %}
       <script type="text/javascript"
