--- a/integrates/front/src/scenes/Dashboard/components/HorizontalBarIndicator/index.css
+++ b/integrates/front/src/scenes/Dashboard/components/HorizontalBarIndicator/index.css
@@ -1,4 +1,8 @@
 :local .styleChart {
-  composes: styleChart from '../IndicatorStack/index.css';
+  width: 100%;
+  height: 100%;
+  display: block;
+  margin-top: 10px;
+  text-align: center;
   text-align: center !important;
 }
