airs\refac(front): #3581.1 increase products width
- Increase the width for the products section


Former-commit-id: 2863f452a2f26ed17ca889989e8d2de243c7e072

--- a/airs/theme/2020/templates/landing.html
+++ b/airs/theme/2020/templates/landing.html
@@ -103,7 +103,7 @@
           src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
   {% endassets %}
 </div>
-<div class="mw8 mr-auto ml-auto ph4">
+<div class="mw-1366 mr-auto ml-auto ph-body">
   <div class="w-100">
     <h2 class="f1 fw6 c-fluid-bk roboto mt6 mb4 lh-solid tc ">
       Four elements that help you build and maintain secure IT systems
