airs\refac(cross): #3586 devsecops skims correct
- Two simple errors were corrected in sections DevSecOps and Skims.


Former-commit-id: 1e744e41d5c0f6012e77ac3da600e55887c44de5

--- a/airs/theme/2020/templates/products/skims.html
+++ b/airs/theme/2020/templates/products/skims.html
@@ -216,7 +216,7 @@
             Improvement
           </h3>
           <p class="f5 fw3 mv0 lh-copy">
-            Allows you to improve your applications security without slowing down
+            Allows you to improve your applications' security without slowing down
             the development speed in your company.
           </p>
         </li>
