airs\refac(front): #3582 margins on products
- Added margins to the key benefits section of the products


Former-commit-id: 13ca0b57502d549817a863251c767721288aef57

--- a/airs/theme/2020/templates/products/skims.html
+++ b/airs/theme/2020/templates/products/skims.html
@@ -145,7 +145,7 @@
   </div>
 </div>
 <h2 class="roboto c-fluid-bk f1 fw6 tc pt6">Key Benefits</h2>
-<div class="w-100 flex-l pv4">
+<div class="w-100 flex-l pv4 ph-body">
   <div class="w-100">
     <div class="w-50-l fl-l tl ph0-ns ph-body" data-aos="fade-right">
       <img
@@ -192,7 +192,7 @@
     </div>
   </div>
 </div>
-<div class="w-100 flex pv4">
+<div class="w-100 flex pv4 ph-body">
   <div class="w-100">
     <div class="w-50-l fr-l tr ph0-l ph-body" data-aos="fade-left">
       <img
