--- a/airs/theme/2020/templates/products/integrates.html
+++ b/airs/theme/2020/templates/products/integrates.html
@@ -135,7 +135,7 @@
   </div>
 </div>
 <h2 class="roboto c-fluid-bk f1 fw6 tc pt6">Key Benefits</h2>
-<div class="w-100 flex-l pv4">
+<div class="w-100 flex-l pv4 ph-body">
   <div class="w-100">
     <div class="w-50-l fl-l tl ph0-ns ph-body" data-aos="fade-right">
       <img
@@ -182,7 +182,7 @@
     </div>
   </div>
 </div>
-<div class="w-100 flex pv4">
+<div class="w-100 flex pv4 ph-body">
   <div class="w-100">
     <div class="w-50-l fr-l tr ph0-ns ph-body" data-aos="fade-left">
       <img
