airs\refac(front): #3614 resources upload webinar
- I uploaded the new webinar by Julian Arango.


Former-commit-id: 3f4f1f1998c5f87deef5fac724714f6e4ee74f37

--- a/airs/theme/2020/templates/resources/resources.html
+++ b/airs/theme/2020/templates/resources/resources.html
@@ -446,6 +446,29 @@
         </div>
       </div>
     </div>
+    <div
+      class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+      <div class="bg-card8 br3 br--top">
+        <div class="pa3">
+          <span class="f7 white bg-moon-gray br3 pv2 ph3 ma0 fw7">ENG</span>
+        </div>
+      </div>
+      <div class="ph3 mh1">
+        <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
+          Elements of a Successful Testing Strategy
+          <br>
+        </h1>
+        <p class="c-fluid-bk fw3 f5 mv0">
+          Support your decision-making regarding security testing on your systems.
+          <br>
+        </p>
+        <div class="pv4 tc">
+          <a href="https://register.gotowebinar.com/register/1179192545930222092">
+            <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock content %}
