airs\refac(front): #3613.2 change form
- Updated form in the footer


Former-commit-id: 7136fdf7be5e72b4e878ba218aa2b443cd566970

--- a/airs/theme/2020/templates/contact-us.html
+++ b/airs/theme/2020/templates/contact-us.html
@@ -204,7 +204,7 @@
           <div class='tc'>
             <input type='submit'
                   id='formsubmit'
-                  class="formsubmit bn br2 bannerbt hv-bt-fluid-rd bt-pd contact-pd bt-trans white b roboto pointer"
+                  class="formsubmit bn br2 bannerbt hv-bt-fluid-rd pv3 w-100 bt-trans white b roboto pointer"
                   value='Submit'
                   title='Submit'>
           </div>
